--- a/template/index.html
+++ b/template/index.html
@@ -67,7 +67,10 @@ $def with (form)
         <br>
 
 
-        <div id="btn" class="btn-group offset1">
+        <div id="btn" class="btn-group ">
+          <button type="reset" class="btn btn-primary">重置</button>
+        </div>
+        <div id="btn" class="btn-group ">
           <button type="submit" class="btn btn-primary">查询</button>
         </div>
         </form>
