--- a/template/index.html
+++ b/template/index.html
@@ -67,10 +67,10 @@ $def with (form)
         <br>
 
 
-        <div id="btn" class="btn-group ">
+        <div id="btn" class="btn-group offset3">
           <button type="reset" class="btn btn-primary">重置</button>
         </div>
-        <div id="btn" class="btn-group ">
+        <div id="btn" class="btn-group offset3">
           <button type="submit" class="btn btn-primary">查询</button>
         </div>
         </form>
