--- a/template/index.html
+++ b/template/index.html
@@ -65,14 +65,8 @@ $def with (form)
           <p class="alert alert-danger">Try again, AmeriCAN:</p>
         $:form.render()
         <br>
-
-
-        <div id="btn" class="btn-group offset3">
-          <button type="reset" class="btn btn-primary">重置</button>
-        </div>
-        <div id="btn" class="btn-group offset3">
+          <button type="reset" class="btn">重置</button>&nbsp;
           <button type="submit" class="btn btn-primary">查询</button>
-        </div>
         </form>
 
 
