--- a/template/index.html
+++ b/template/index.html
@@ -82,6 +82,11 @@ $def with (form)
       Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
       Version:beta 1.0
     </center>
-
+<!-- baidu sitecenter   -->
+    <script type="text/javascript">
+      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+      document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+<!-- baidu sitecenter   -->
   </body>
 </html>
