--- a/template/index.html
+++ b/template/index.html
@@ -45,7 +45,8 @@ $def with (form)
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/">首页</a></li>
-              <li><a href="contact.html">联系我们</a></li>
+              <li><a href="/notice.html">公告</a></li>
+              <li><a href="/contact.html">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -82,11 +83,15 @@ $def with (form)
       Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
       Version:beta 1.0
     </center>
+
 <!-- baidu sitecenter   -->
-    <script type="text/javascript">
-      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-      document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-    </script>
+    <div style="display: none;">
+      <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+      </script>
+    </div>
 <!-- baidu sitecenter   -->
+
   </body>
 </html>
