--- a/template/result.html
+++ b/template/result.html
@@ -40,8 +40,9 @@ $def with(table, error)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
+              <li><a href="/notice.html">公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
-              <li><a href="contact.html" target="_blank">联系我们</a></li>
+              <li><a href="/contact.html" target="_blank">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -64,10 +65,12 @@ $def with(table, error)
       Version:beta 1.0
     </center>
 <!-- baidu sitecenter   -->
-    <script type="text/javascript">
-      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-      document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-    </script>
+    <div style="display: none;">
+      <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+      </script>
+    </div>
 <!-- baidu sitecenter   -->
   </body>
 </html>
