--- a/template/notice.html
+++ b/template/notice.html
@@ -40,7 +40,7 @@
             <ul class="nav">
               <li><a href="/">首页</a></li>
               <li class="active"><a href="/notice.html">公告</a></li>
-              <li><a href="/contact.html" target="_blank">联系我们</a></li>
+              <li><a href="/contact.html">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -51,11 +51,11 @@
       
       <h2>网站公告</h2>
       <ul>
-
-        <div class="alert alert-info">
-          <li>当出现<strong>System is Busy!!!</strong>时是因为正方教务系未为正常运行,非本网站原因</li>
-        </div>
-        
+        <li>  
+          <div class="alert alert-info span7">
+            <h3>当出现<strong>System is Busy!!!</strong>时是因为正方教务系统未正常运行,非本网站原因</h3>
+          </div>
+        </li>
       </ul>
   	</div> <!-- /container -->
     <hr>
