--- a/template/contact.html
+++ b/template/contact.html
@@ -40,7 +40,7 @@
             <ul class="nav">
               <li><a href="/">首页</a></li>
               <li><a href="/notice.html#">公告</a></li>
-              <li class="active"><a href="/contact.html" target="_blank">联系我们</a></li>
+              <li class="active"><a href="/contact.html">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
