--- a/template/result.html
+++ b/template/result.html
@@ -40,7 +40,7 @@ $def with(table, error)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
-              <li><a href="/notice.html">公告</a></li>
+              <li><a href="/notice.html" target="_blank">公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
               <li><a href="/contact.html" target="_blank">联系我们</a></li>
             </ul>
