--- a/template/notice.html
+++ b/template/notice.html
@@ -8,17 +8,13 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
     <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
-
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -50,13 +46,30 @@
     <div id="container" class= "container">
       
       <h2>网站公告</h2>
-      <ul>
-        <li>  
-          <div class="alert alert-info span7">
-            <h3>当出现<strong>System is Busy!!!</strong>时是因为正方教务系统未正常运行,非本网站原因</h3>
-          </div>
+      <hr>
+      <ul class="unstyled">
+        <li>
+          <blockquote>
+            <p>本网站用于方便山理的同学们使用校外网或者在家里查成绩等其他信息,由于本网站涉及同学们的个人信息安全, 本人特此保证:绝不使用非法手段窃取同学们的帐号密码或者其他相关隐私内容, 本网站源码将在整理后托管在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>, 有能力的同学可以自行检查, 当然也希望有能力的同学提出好的建议或者需求, 也可以在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>上直接提交修改后的源码, 我将整合在本网站中. </p>
+            <p>由于网站搭建较为匆促, 不管前台还是后台都比较粗糙, 现在是python编写, 使用web.py框架,以后会陆续增加其他功能, 比如一键好评老师等等, 只有想不到没有做不到, 还有<a href="http://www.cnblogs.com/fuyunbiyi" target="_blank">浮云比翼</a>同学的移动客户端,后续功能的开发暂定寒假时间吧, 现在先准备考试了^_^</p>
+            <small>zhwei</small>
+          </blockquote>
         </li>
+        <hr>
+        <li>
+          <blockquote class="pull-right">
+            <p>当出现<strong>System is Busy!!!</strong>时是因为正方教务系统未正常运行,非本网站原因.</p>
+            <small>zhwei</small>
+          </blockquote>
+        </li>
+<!--         <li>
+          <blockquote>
+            <p></p>
+            <small></small>
+          </blockquote>
+        </li> -->
       </ul>
+
   	</div> <!-- /container -->
     <hr>
     <center>
