--- a/template/result.html
+++ b/template/result.html
@@ -40,22 +40,24 @@ $def with(table, error)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
-              <li><a href="/notice.html" target="_blank">公告</a></li>
+              <li><a href="/notice.html" >公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
-              <li><a href="/contact.html" target="_blank">联系我们</a></li>
+              <li><a href="/contact.html" >联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-    <div id="container" class= "container">
-    	<table border="1" class= "table table-striped table-bordered table-condensed">
-			$for i in table:
-				$:i
-		</table>
-		<h2 id="error">$error</h2>
-  	</div> <!-- /container -->
+    <div class="jumbotron">
+      <div id="container" class= "container">
+        <table border="1" class= "table table-striped table-bordered table-condensed">
+            $for i in table:
+              $:i
+          </table>
+          <h2 id="error">$error</h2>
+          </div> <!-- /container -->
+    </div>
     <hr>
     <center>
       Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
