--- a/template/contact.html
+++ b/template/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>联系我们</title>
+    <title>联系我们--Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">正方教务查询系统</a>
+          <a class="brand" href="http://gotit.asia/">Got it</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
