--- a/template/notice.html
+++ b/template/notice.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>公告</title>
+    <title>公告--Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Got it,正方教务系统查询工具">
+    <meta name="author" content="zhwei">
 
     <!-- Le styles -->
     <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">正方教务查询系统</a>
+          <a class="brand" href="http://gotit.asia/">Got it</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
@@ -48,6 +48,13 @@
       <h2>网站公告</h2>
       <hr>
       <ul class="unstyled">
+        <li>
+          <blockquote>
+			         <p>昨天晚上网站出现大量<strong> System is Busy!!!</strong>, 由于前几次在过一段时间后都能正常使用没有引起太大的重视, 晚上回宿舍后详细检查了下,主要原因是前几天使用的正方教务系统的链接失效了, 登录后内容为乱码, 无法正常抓取到信息, 然后挑灯夜敲, 现在网站已经能够正常服务了, 非常感谢各位同学的支持, 貌似昨天晚上十二点的时候还有同学在查成绩......感谢你们的支持, 我们会将 <strong>Got it</strong>做到最好!</p>
+            <small>zhwei -- 2013.1.11-00:30</small>
+          </blockquote>
+        </li>
+        <hr>  
         <li>
           <blockquote>
             <p>本网站用于方便山理的同学们使用校外网或者在家里查成绩等其他信息,由于本网站涉及同学们的个人信息安全, 本人特此保证:绝不使用非法手段窃取同学们的帐号密码或者其他相关隐私内容, 本网站源码将在整理后托管在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>, 有能力的同学可以自行检查, 当然也希望有能力的同学提出好的建议或者需求, 也可以在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>上直接提交修改后的源码, 我将整合在本网站中. </p>
