--- a/template/index.html
+++ b/template/index.html
@@ -88,10 +88,10 @@ $def with (form)
         <p class="alert alert-danger">输入错误:</p>
       $:form.render()
       <br>
-      <label align="center">
+      <center>
         <button type="submit" class="btn btn-primary">查询</button>&nbsp;
         <button type="reset" class="btn">重置</button>
-      </label>
+      </center>
     </form>
       <hr>
       <center>
