--- a/template/cet.html
+++ b/template/cet.html
@@ -3,9 +3,9 @@ $def with (form)
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Got it--正方教务系统查询工具</title>
+    <title>四六级成绩查询 -- Got it </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Got it,正方教务系统查询工具">
+    <meta name="description" content="Got it,四六级成绩查询">
     <meta name="author" content="zhwei">
 
     <!-- Le styles -->
@@ -68,8 +68,8 @@ $def with (form)
           <a class="brand" href="http://gotit.asia/">Got it</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/">首页</a></li>
-              <li><a href="/cet">CET</a></li>
+              <li><a href="/">首页</a></li>
+              <li class="active"><a href="/cet">CET</a></li>
               <li><a href="/notice.html">公告</a></li>
               <li><a href="/contact.html">联系我们</a></li>
             </ul>
@@ -79,11 +79,11 @@ $def with (form)
     </div>
 
     <div id="container" class= "container"><br>
-    <center><h1>正方教务系统查询工具</h1></center>
+    <center><h1>四六级成绩查询</h1></center>
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-        新增四六级成绩查询功能,四六级成绩公布后欢迎使用,详情见<a href="http://gotit.asia/notice.html">公告</a>
+        新增四六级成绩查询功能, 四六级成绩公布后欢迎使用, 详情见<a href="http://gotit.asia/notice.html">公告</a>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
