--- a/template/result_dic.html
+++ b/template/result_dic.html
@@ -1,20 +1,24 @@
+$def with(items,result)
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>联系我们--Got it</title>
+    <title>查询结果--Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
     <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -23,6 +27,7 @@
   </head>
 
   <body>
+
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -31,13 +36,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="http://gotit.asia/">Got it</a>
+          <a class="brand" href="/">Got it</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/">首页</a></li>
+              <li><a href="http://gotit.asia/">首页</a></li>
               <li><a href="/cet">CET</a></li>
-              <li><a href="/notice.html#">公告</a></li>
-              <li class="active"><a href="/contact.html">联系我们</a></li>
+              <li><a href="/notice.html" >公告</a></li>
+              <li class="active"><a href="#">查询结果</a></li>
+              <li><a href="/contact.html" >联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -45,32 +51,24 @@
     </div>
 
     <div id="container" class= "container">
-      <div style="width: 870px; MARGIN-RIGHT: auto;MARGIN-LEFT: auto;">
-        <h1>联系我们</h1>
-        <hr />
-        <h3>我们是<a href="http://sdutlinux.org" target="_blank">山东理工大学linux用户组</a></h3>
-
-        <p>如果您对本网站有新的需求或建议,请联系<a href="mailto:zhwei.yes@gmail.com">zhwei</a>,或者前往<a href="http://sdutlinux.org/t/339" target="_blank">http://sdutlinux.org/t/339</a>留言.</p>
-
-        <h3>关于作者</h3>
-
-        <h4><p><a href="http://zhwei.42qu.com" target="_blank">zhwei</a></p></h4>
-    	     <p><strong>贡献</strong>:正方教务系统相关查询</p>
-        <h4><p><a href="http://www.cnblogs.com/ma6174/" target="_blank">马伟伟</a></p></h4>
-    	     <p><strong>贡献</strong>:学分绩点查询, 四六级成绩查询</p>
-      </div>
-
+    	<table border="1" class= "table table-striped table-bordered table-condensed">
+    <tr>
+    $for i in items:<td><strong>$i</strong></td>
+    </tr>
+    <tr>
+    $for key in result.keys():
+        <td><strong>$result[key]</strong></td>
+    </tr>
+		</table>
   	</div> <!-- /container -->
-    <div class="container">
-      <hr>
-      <center>
-        Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
-        <a href="http://python.org/" target="_blank">python</a>&nbsp;
-        <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
-        Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-        Version:beta 1.0
-      </center>
-    </div>
+    <hr>
+    <center>
+      Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
+      <a href="http://python.org/" target="_blank">python</a>&nbsp;
+      <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
+      Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
+      Version:beta 1.0
+    </center>
 <!-- baidu sitecenter   -->
     <div style="display: none;">
       <script type="text/javascript">
