--- a/template/result.html
+++ b/template/result.html
@@ -40,6 +40,7 @@ $def with(table, error)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="http://gotit.asia/">首页</a></li>
+              <li><a href="/cet">CET</a></li>
               <li><a href="/notice.html" >公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
               <li><a href="/contact.html" >联系我们</a></li>
