change css to sae

--- a/template/contact.html
+++ b/template/contact.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="http://lzhe.sinaapp.com/media/css/bootstrap.css" rel="stylesheet">
+    <link href="http://lzhe.sinaapp.com/media/css/bootstrap-responsive.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
