--- a/template/result_dic.html
+++ b/template/result_dic.html
@@ -9,9 +9,8 @@ $def with(items,result)
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="http://wrongwaycn.github.com/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="http://lzhe.sinaapp.com/media/css/bootstrap.css" rel="stylesheet">
+    <link href="http://lzhe.sinaapp.com/media/css/bootstrap-responsive.css" rel="stylesheet">
 
     <style>
       body {
