--- a/template/cet.html
+++ b/template/cet.html
@@ -94,7 +94,18 @@ $def with (form)
         <button type="reset" class="btn">重置</button>
       </center>
     </form>
+
       <hr>
+      <div style="text-align:center;">
+        <script type="text/javascript"> 
+          alimama_pid="mm_34979126_3463384_11269475"; 
+          alimama_width=728; 
+          alimama_height=90; 
+        </script> 
+        <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>
+      </div>
+      <hr>
+      
       <center>
         Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
         <a href="http://python.org/" target="_blank">python</a>&nbsp;
