整理了目录结构, 添加文档

--- a/template/contact.html
+++ b/template/contact.html
@@ -71,6 +71,8 @@
         Version:beta 1.0
       </center>
     </div>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
 <!-- baidu sitecenter   -->
     <div style="display: none;">
       <script type="text/javascript">
