--- a/template/notice.html
+++ b/template/notice.html
@@ -101,6 +101,8 @@
         document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
       </script>
     </div>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
 <!-- baidu sitecenter   -->
   </body>
 </html>
