--- a/template/result.html
+++ b/template/result.html
@@ -63,6 +63,8 @@ $def with(table, error)
       Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
       Version:beta 1.0
     </center>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
 <!-- baidu sitecenter   -->
     <div style="display: none;">
       <script type="text/javascript">
