--- a/template/index.html
+++ b/template/index.html
@@ -114,6 +114,8 @@ $def with (form)
         Version:beta 1.0
       </center>
     </div> <!-- /container -->
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
 
 <!-- baidu sitecenter   -->
     <div style="display: none;">
