--- a/template/cet.html
+++ b/template/cet.html
@@ -83,7 +83,7 @@ $def with (form)
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-        新增四六级成绩查询功能, 四六级成绩公布后欢迎使用, 详情见<a href="http://gotit.asia/notice.html">公告</a>
+        姓名多于三个字的只输入前三个字.
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
