--- a/template/index.html
+++ b/template/index.html
@@ -83,7 +83,7 @@ $def with (form)
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  <h3>四六级成绩已公布,可前往<a href="http://gotit.asia/cet"><strong>CET</strong></a>查询.</h3>
+		  <h3>四六级成绩查询系统已更新,欢迎使用-<a href="http://gotit.asia/cet"><strong>CET</strong></a></h3>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
