--- a/template/result_list.html
+++ b/template/result_list.html
@@ -9,8 +9,8 @@ $def with(items,lis)
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://lzhe.sinaapp.com/media/css/bootstrap.css" rel="stylesheet">
-    <link href="http://lzhe.sinaapp.com/media/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 
     <style>
       body {
