--- a/template/cet.html
+++ b/template/cet.html
@@ -9,8 +9,8 @@ $def with (form)
     <meta name="author" content="zhwei">
 
     <!-- Le styles -->
-    <link href="http://lzhe.sinaapp.com/media/css/bootstrap.css" rel="stylesheet">
-    <link href="http://lzhe.sinaapp.com/media/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 40px;
