4hao apache version

--- a/template/cet.html
+++ b/template/cet.html
@@ -112,7 +112,7 @@ $def with (form)
         <a href="http://python.org/" target="_blank">python</a>&nbsp;
         <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
         Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-        Version:beta 1.0
+        Version:2.0
       </center>
     </div> <!-- /container -->
 	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
