--- a/template/index.html
+++ b/template/index.html
@@ -83,7 +83,7 @@ $def with (form)
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  <h3>四六级成绩查询系统已更新,欢迎使用-<a href="http://gotit.asia/cet"><strong>CET</strong></a></h3>
+		  <h3>Got it最新改版,欢迎使用-<a href="http://gotit.asia/cet"><strong>CET</strong></a></h3>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
@@ -111,7 +111,7 @@ $def with (form)
         <a href="http://python.org/" target="_blank">python</a>&nbsp;
         <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
         Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-        Version:beta 1.0
+        Version:2.0
       </center>
     </div> <!-- /container -->
 	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
