--- a/template/notice.html
+++ b/template/notice.html
@@ -47,22 +47,25 @@
     <div id="container" class= "container">
       
       <h2>网站公告</h2>
-      <hr>
       <ul class="unstyled">
+        <li>
+          <blockquote class="pull-right">
+            <p>网站最新改版,现在比以前速度应该要快一点,欢迎使用,现在部署在apache上,github上的45分支.</p>
+            <small>zhwei -- 2013.3.3-15:50</small>
+          </blockquote>
+        </li>
         <li>
           <blockquote class="pull-left">
             <p>网站新增四六级成绩查询功能, 当然啦, 到现在为止成绩还没有公布, 估计在二月底到三月初吧, 敬请期待吧, 希望大家都能得到满意的成绩单, <a href="http://gotit.asia/cet">查询链接</a>.</p>
             <small>zhwei -- 2013.1.14-00:14</small>
           </blockquote>
         </li>
-        <hr>
         <li>
           <blockquote class="pull-right">
 			         <p>昨天晚上网站出现大量<strong> System is Busy!!!</strong>, 由于前几次在过一段时间后都能正常使用没有引起太大的重视, 晚上回宿舍后详细检查了下,主要原因是前几天使用的正方教务系统的链接失效了, 登录后内容为乱码, 无法正常抓取到信息, 然后挑灯夜敲, 现在网站已经能够正常服务了, 非常感谢各位同学的支持, 貌似昨天晚上十二点的时候还有同学在查成绩......感谢你们的支持, 我们会将 <strong>Got it</strong>做到最好!</p>
             <small>zhwei -- 2013.1.11-00:30</small>
           </blockquote>
         </li>
-        <hr>  
         <li>
           <blockquote class="pull-left">
             <p>本网站用于方便山理的同学们使用校外网或者在家里查成绩等其他信息,由于本网站涉及同学们的个人信息安全, 本人特此保证:绝不使用非法手段窃取同学们的帐号密码或者其他相关隐私内容, 本网站源码将在整理后托管在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>, 有能力的同学可以自行检查, 当然也希望有能力的同学提出好的建议或者需求, 也可以在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>上直接提交修改后的源码, 我将整合在本网站中. </p>
@@ -70,7 +73,6 @@
             <small>zhwei</small>
           </blockquote>
         </li>
-        <hr>
         <li>
           <blockquote class="pull-right">
             <p>当出现<strong>System is Busy!!!</strong>时是因为正方教务系统未正常运行,非本网站原因.</p>
@@ -92,7 +94,7 @@
       <a href="http://python.org/" target="_blank">python</a>&nbsp;
       <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
       Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-      Version:beta 1.0
+      Version:2.0
     </center>
 <!-- baidu sitecenter   -->
     <div style="display: none;">
