--- a/template/result_list.html
+++ b/template/result_list.html
@@ -66,7 +66,7 @@ $def with(items,lis)
       <a href="http://python.org/" target="_blank">python</a>&nbsp;
       <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
       Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
-      Version:beta 1.0
+      Version:2.0
     </center>
 	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
 	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
