--- a/template/result_list.html
+++ b/template/result_list.html
@@ -39,6 +39,7 @@ $def with(items,lis)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="http://gotit.asia/">首页</a></li>
+              <li><a href="/score">成绩查询</a></li>
               <li><a href="/cet">CET</a></li>
               <li><a href="/notice.html" >公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
