--- a/template/cet.html
+++ b/template/cet.html
@@ -69,6 +69,7 @@ $def with (form)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
+              <li><a href="/score">成绩查询</a></li>
               <li class="active"><a href="/cet">CET</a></li>
               <li><a href="/notice.html">公告</a></li>
               <li><a href="/contact.html">联系我们</a></li>
