--- a/template/result.html
+++ b/template/result.html
@@ -38,6 +38,7 @@ $def with(table, error)
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="http://gotit.asia/">首页</a></li>
+              <li><a href="/score">成绩查询</a></li>
               <li><a href="/cet">CET</a></li>
               <li><a href="/notice.html" >公告</a></li>
               <li class="active"><a href="#">查询结果</a></li>
