--- a/template/score.html
+++ b/template/score.html
@@ -3,7 +3,7 @@ $def with (form)
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Got it--正方教务系统查询工具</title>
+    <title>成绩查询系统--Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Got it,正方教务系统查询工具">
     <meta name="author" content="zhwei">
@@ -68,8 +68,8 @@ $def with (form)
           <a class="brand" href="http://gotit.asia/">Got it</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/">首页</a></li>
-              <li><a href="/score">成绩查询</a></li>
+              <li><a href="/">首页</a></li>
+              <li class="active"><a href="/score">成绩查询</a></li>
               <li><a href="/cet">CET</a></li>
               <li><a href="/notice.html">公告</a></li>
               <li><a href="/contact.html">联系我们</a></li>
@@ -80,11 +80,11 @@ $def with (form)
     </div>
 
     <div id="container" class= "container"><br>
-    <center><h1>正方教务系统查询工具</h1></center>
+    <center><h1>成绩查询系统</h1></center>
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  <h3>Got it最新改版,欢迎使用-<a href="http://gotit.asia/cet"><strong>CET</strong></a></h3>
+		  <p>本系统可查询全部学科成绩,包括第二专业和补考成绩,详情见<a href="/notice.html">公告</a></p>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
