repair some bug of get_all_score

--- a/template/notice.html
+++ b/template/notice.html
@@ -50,6 +50,12 @@
       <h2>网站公告</h2>
       <ul class="unstyled">
         <li>
+          <blockquote class="pull-left">
+			  <p>Got it 添加成绩查询系统,可供同学查询入学后所有成绩,包括第二专业和补考成绩. 本系统不同于首页的成绩查询功能,首页只能查询本学期的第一专业成绩,不能查询补考成绩,不过本系统成绩更新较慢,不能实时更新最新第一次考试成绩,当然补考成绩除外,欢迎同学们的使用!<a href="/score">查询链接</a></p>
+            <small>zhwei -- 2013.3.5-22:53</small>
+          </blockquote>
+        </li>
+        <li>
           <blockquote class="pull-right">
             <p>网站最新改版,现在比以前速度应该要快一点,欢迎使用,现在部署在apache上,github上的45分支.</p>
             <small>zhwei -- 2013.3.3-15:50</small>
