--- a/template/index.html
+++ b/template/index.html
@@ -84,7 +84,7 @@ $def with (form)
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  <h3>Got it最新改版,欢迎使用-<a href="http://gotit.asia/cet"><strong>CET</strong></a></h3>
+		  <p>Got it添加所有成绩查询功能,可查第二专业和补考成绩,详情见-<a href="/notice.html">公告</a></p>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
