--- a/template/index.html
+++ b/template/index.html
@@ -84,7 +84,8 @@ $def with (form)
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  <p>Got it添加所有成绩查询功能,可查第二专业和补考成绩,详情见-<a href="/notice.html">公告</a></p>
+		  <h4>现可查第二专业成绩和补考成绩-<a href="/score">成绩</a></h4>
+		  <h5>为降低运营成本,现本网站广告位面向校园招商,详情见--<a href="/notice.html">广告招商</a></h4>
       </div>
       $if not form.valid: 
         <p class="alert alert-danger">输入错误:</p>
@@ -98,12 +99,7 @@ $def with (form)
       <hr>
 
       <div style="text-align:center;">
-        <script type="text/javascript"> 
-          alimama_pid="mm_34979126_3463384_11269475"; 
-          alimama_width=728; 
-          alimama_height=90; 
-        </script> 
-        <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>
+<a href="/notice.html"><img src="/static/forad.jpg"></a>
       </div>
 
       <hr>
@@ -115,8 +111,8 @@ $def with (form)
         Version:2.0
       </center>
     </div> <!-- /container -->
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
 <!-- baidu sitecenter   -->
     <div style="display: none;">
