--- a/template/notice.html
+++ b/template/notice.html
@@ -50,6 +50,14 @@
       <h2>网站公告</h2>
       <ul class="unstyled">
         <li>
+		    <a href="/notice.html"><img src="/static/forad.jpg"></a>
+          <blockquote class="pull-right">
+			  <p>gotit自开发以来一直以服务校内同学们日常查询方便为己任,期间也曾出现过各种bug,不过我们的成员都在尽量短的时间内修复了, 为了降低网站的运营成本,这段时间一直挂着淘宝联盟的广告,不过由于淘宝按照交易成交率计费,所以效果并不理想,现在决定面向学校进行广告招商,本网站日浏览量最少1000以上,成绩公布期间日浏览量过万,宣传效果绝对超过贴小报或者发传单, 有意向的同学可以邮件联系<a href="mailto:zhwei@gotit.asia">zhwei</a>,其他联系方式见<a href="/contact.html">联系我们</a></p>
+        <h3>网站pv图: <a href="/static/1.png">图一</a><a href="/static/2.png">图二</a></h3>
+            <small>zhwei -- 2013.3.6-21:48</small>
+          </blockquote>
+        </li>
+        <li>
           <blockquote class="pull-left">
 			  <p>Got it 添加成绩查询系统,可供同学查询入学后所有成绩,包括第二专业和补考成绩. 本系统不同于首页的成绩查询功能,首页只能查询本学期的第一专业成绩,不能查询补考成绩,不过本系统成绩更新较慢,不能实时更新最新第一次考试成绩,当然补考成绩除外,欢迎同学们的使用!<a href="/score">查询链接</a></p>
             <small>zhwei -- 2013.3.5-22:53</small>
@@ -110,8 +118,8 @@
         document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
       </script>
     </div>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 <!-- baidu sitecenter   -->
   </body>
 </html>
