--- a/template/result.html
+++ b/template/result.html
@@ -48,7 +48,9 @@ $def with(table, error)
         </div>
       </div>
     </div>
-
+      <div style="text-align:center;">
+        <a href="/notice.html"><img src="/static/forad.jpg"></a>
+      </div>
     <div id="container" class= "container">
     	<table border="1" class= "table table-striped table-bordered table-condensed">
 			$for i in table:
