--- a/template/cet.html
+++ b/template/cet.html
@@ -99,12 +99,7 @@ $def with (form)
 
       <hr>
       <div style="text-align:center;">
-        <script type="text/javascript"> 
-          alimama_pid="mm_34979126_3463384_11269475"; 
-          alimama_width=728; 
-          alimama_height=90; 
-        </script> 
-        <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>
+        <a href="/notice.html"><img src="/static/forad.jpg"></a>
       </div>
       <hr>
       
@@ -116,8 +111,8 @@ $def with (form)
         Version:2.0
       </center>
     </div> <!-- /container -->
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/jquery.js"></script>
-	<script type="text/javascript" src="http://www.bootcss.com/assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
 <!-- baidu sitecenter   -->
     <div style="display: none;">
