--- a/template/cet_raise.html
+++ b/template/cet_raise.html
@@ -88,12 +88,7 @@
 
       <hr>
       <div style="text-align:center;">
-        <script type="text/javascript"> 
-          alimama_pid="mm_34979126_3463384_11269475"; 
-          alimama_width=728; 
-          alimama_height=90; 
-        </script> 
-        <script src="http://a.alimama.cn/inf.js" type="text/javascript"></script>
+<a href="/notice.html"><img src="/static/forad.jpg"></a>
       </div>
       <hr>
       
