--- a/template/result_list.html
+++ b/template/result_list.html
@@ -49,7 +49,9 @@ $def with(items,lis)
         </div>
       </div>
     </div>
-
+      <div style="text-align:center;">
+        <a href="/notice.html"><img src="/static/forad.jpg"></a>
+      </div>
     <div id="container" class= "container">
     	<table border="1" class= "table table-striped table-bordered table-condensed">
     <tr>
