--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,9 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-      <h4>现可查第二专业成绩和补考成绩-<a href="/score">成绩</a></h4>
+			<h4>山东理工大学linux小组纳新！详见<a href="/notice.html" target="_blank">公告</a></h4>
+		  <hr>
+			<h4>已增加验证码识别功能，网站所有功能均能正常使用！</a></h4>
       </div>
       <br>
       {% if not form.valid %}
