--- a/templates/notice.html
+++ b/templates/notice.html
@@ -49,6 +49,16 @@
       
       <h2>网站公告</h2>
       <ul class="unstyled">
+		 <li>
+          <blockquote class="pull-left">
+                          <p><strong>山东理工大学linux小组挂职于校教务处教育技术中心，现面向大一同学纳新！</strong></p>
+                          <p><a href="http://jwch.sdut.edu.cn/blog/about/index.html"><strong>关于我们</strong></a>！</p>
+                          <p><a href="http://jwch.sdut.edu.cn/blog/index.html"><strong>我们de博客</strong></a>！</p>
+                          <p><a href="http://jwch.sdut.edu.cn/hero"><strong>加入我们</strong></a>！</p>
+                          <img src="/static/linux.jpg" />
+            <small>zhwei -- 2013.4.2-15:19</small>
+          </blockquote>
+        </li>
         <li>
 		    <a href="/notice.html"><img src="/static/forad.jpg"></a>
           <blockquote class="pull-right">
