--- a/templates/result_gpa.html
+++ b/templates/result_gpa.html
@@ -1,9 +1,14 @@
 {% extends "base-result.html" %}
 {% block content %}
       <table border="1" class= "table table-striped table-bordered table-condensed">
-        {% for i in table %}
-          {{i}}
-        {% endfor %}
+		  <tr>
+		  <td>
+			  <strong>平均学分绩点</strong>
+		  </td>
+		  <td>
+			  <strong>{{ gpa }}</strong>
+	  </td>
+  </tr>
     </table>
 
         <h3>学分基点计算说明：</h3>
