--- a/templates/notice.html
+++ b/templates/notice.html
@@ -51,7 +51,7 @@
       <ul class="unstyled">
 		 <li>
           <blockquote class="pull-left">
-                          <p><strong>山东理工大学linux小组挂职于校教务处教育技术中心，现面向大一同学纳新！</strong></p>
+                          <p><strong>山东理工大学教务处教育技术中心小组,现面向大一同学纳新！</strong></p>
                           <p><a href="http://jwch.sdut.edu.cn/blog/about/index.html"><strong>关于我们</strong></a>！</p>
                           <p><a href="http://jwch.sdut.edu.cn/blog/index.html"><strong>我们de博客</strong></a>！</p>
                           <p><a href="http://jwch.sdut.edu.cn/hero"><strong>加入我们</strong></a>！</p>
@@ -60,7 +60,6 @@
           </blockquote>
         </li>
         <li>
-		    <a href="/notice.html"><img src="/static/forad.jpg"></a>
           <blockquote class="pull-right">
 			  <p>gotit自开发以来一直以服务校内同学们日常查询方便为己任,期间也曾出现过各种bug,不过我们的成员都在尽量短的时间内修复了, 为了降低网站的运营成本,这段时间一直挂着淘宝联盟的广告,不过由于淘宝按照交易成交率计费,所以效果并不理想,现在决定面向学校进行广告招商,本网站日浏览量最少1000以上,成绩公布期间日浏览量过万,宣传效果绝对超过贴小报或者发传单, 有意向的同学可以邮件联系<a href="mailto:zhwei@gotit.asia">zhwei</a>,其他联系方式见<a href="/contact.html">联系我们</a></p>
         <h3>网站pv图: <a href="/static/1.png">图一</a><a href="/static/2.png">图二</a></h3>
@@ -93,7 +92,7 @@
         </li>
         <li>
           <blockquote class="pull-left">
-            <p>本网站用于方便山理的同学们使用校外网或者在家里查成绩等其他信息,由于本网站涉及同学们的个人信息安全, 本人特此保证:绝不使用非法手段窃取同学们的帐号密码或者其他相关隐私内容, 本网站源码将在整理后托管在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>, 有能力的同学可以自行检查, 当然也希望有能力的同学提出好的建议或者需求, 也可以在<a href="https://github.com/zhwei/zhengfang" target="_blank">github</a>上直接提交修改后的源码, 我将整合在本网站中. </p>
+            <p>本网站用于方便山理的同学们使用校外网或者在家里查成绩等其他信息,由于本网站涉及同学们的个人信息安全, 本人特此保证:绝不使用非法手段窃取同学们的帐号密码或者其他相关隐私内容, 本网站源码将在整理后托管在<a href="https://github.com/zhwei/gotit" target="_blank">github</a>, 有能力的同学可以自行检查, 当然也希望有能力的同学提出好的建议或者需求, 也可以在<a href="https://github.com/zhwei/gotit" target="_blank">github</a>上直接提交修改后的源码, 我将整合在本网站中. </p>
             <p>由于网站搭建较为匆促, 不管前台还是后台都比较粗糙, 现在是python编写, 使用web.py框架,以后会陆续增加其他功能, 比如一键好评老师等等, 只有想不到没有做不到, 还有<a href="http://www.cnblogs.com/fuyunbiyi" target="_blank">浮云比翼</a>同学的移动客户端,后续功能的开发暂定寒假时间吧, 现在先准备考试了^_^</p>
             <small>zhwei</small>
           </blockquote>
