--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-			<h4>山东理工大学linux小组纳新！详见<a href="/notice.html" target="_blank">公告</a></h4>
+			<h4>山东理工大学教育技术中心小组纳新！详见<a href="/notice.html" target="_blank">公告</a></h4>
 		  <hr>
 			<h4>已增加验证码识别功能，网站所有功能均能正常使用！</a></h4>
       </div>
