创建config.py文件,管理普通配置更改

--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -47,9 +47,9 @@
         </div>
       </div>
     </div>
-      <div style="text-align:center;">
+<!--      <div style="text-align:center;">
         <a href="/notice.html"><img src="/static/forad.jpg"></a>
-      </div>
+	</div> -->
       <hr>
     <div id="container" class= "container">
 
