--- a/templates/cet.html
+++ b/templates/cet.html
@@ -1,42 +1,10 @@
 {% extends "base-search.html" %}
 {% block title %}四六级成绩查询 -- Got it {% endblock %}
-{% block header %}
-    <style type="text/css">
-      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-      }
-      .form-signin {
-        max-width: 400px;
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-        -webkit-border-radius: 5px;
-           -moz-border-radius: 5px;
-                border-radius: 5px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-                box-shadow: 0 1px 2px rgba(0,0,0,.05);
-      }
-      .form-signin .form-signin-heading,
-      .form-signin .checkbox {
-        margin-bottom: 10px;
-      }
-      .form-signin input[type="text"],
-      .form-signin input[type="password"] {
-        font-size: 16px;
-        height: auto;
-        margin-bottom: 15px;
-        padding: 7px 9px;
-      }
-    </style>
-{% endblock %}
+
 {% block content %}
     <center><h1>四六级成绩查询</h1></center>
     <hr>
-    <form name="main" method="post" accept-charset="utf-8" class="form-signin" action="http://zhweitest.duapp.com/cet">
+    <form name="main" method="post" accept-charset="utf-8" class="form-signin" >
       <div class="alert alert-success">
       姓名多于三个字的只输入前三个字.<br>
       <h3><strong>查询较慢时可以多点几次 "查询" </strong><h3>
