--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,6 @@
         <button type="reset" class="btn">重置</button>
       </center>
     </form>
+	 <img src="/static/pic/{{ cookie }}.gif" alt="" />
   
 {% endblock %}
