中文验证码问题解决

--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -61,10 +61,11 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="/">首页</a></li>
-              <li><a href="/score">成绩查询</a></li>
+              <li><a href="/score">绩点·成绩</a></li>
               <li><a href="/cet">CET</a></li>
               <li><a href="/notice.html">公告</a></li>
               <li><a href="/contact.html">联系我们</a></li>
+              <li><a href="/comment.html">留言</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
