--- a/templates/score.html
+++ b/templates/score.html
@@ -6,7 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-      <p>本系统可查询全部学科成绩,包括第二专业和补考成绩,详情见<a href="/notice.html">公告</a></p>
+      <p>本系统可查询全部学科成绩,包括第二专业和补考成绩以及平均学分绩点查询!</p>
       </div>
       {% if not form.valid %}
         <p class="alert alert-danger">输入错误:</p>
