--- a/templates/result.html
+++ b/templates/result.html
@@ -3,6 +3,25 @@
 
 {% block content %}
 
+{% if jidian %}
+      <table border="1" class= "table table-striped table-bordered table-condensed">
+		  <tr>
+		  <td>
+			  <strong>平均学分绩点</strong>
+		  </td>
+		  <td>
+			  <strong>{{ jidian }}</strong>
+		</td>
+		  <td>
+			  <strong><a href="/help/gpa.html">绩点计算方法</a></strong>
+		</td>
+  </tr>
+    </table>
+{% else %}
+{% endif %}
+
+<h3>各科成绩</h3>
+<hr />
       <table border="1" class= "table table-striped table-bordered table-condensed">
         {% for i in table %}
           {{i}}
