ignore验证码文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
       <div class="alert alert-success">
-		  中文验证码问题已经解决,验证码不清楚时可刷新页面,新增<a href="/contact.html">留言板</a>
+		  <h5>中文验证码问题已经解决,验证码不清楚时可刷新页面,新增<a href="/comment.html">留言板</a></h5>
       </div>
       <br>
       {{ form }}
