成绩查询功能检测源网页是否可得,新增索引页

--- a/templates/aaa.html
+++ b/templates/aaa.html
@@ -69,7 +69,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">首页</a></li>
           <li><a href="/notice.html">公告</a></li>
-          <li><a href="/contact.html">关于我们</a></li>
+          <li><a href="/comment.html">留言</a></li>
         </ul>
         <h3 class="muted">Got it</h3>
       </div>
@@ -86,41 +86,46 @@
       <div class="row-fluid marketing">
         <div class="span6">
           <div class="well" onclick="location.href='/';" style="cursor:pointer;">
-            <h4><a href="">课表查询</a></h4>
-            <p>点击下面链接,查询本学期课表.</p>
+            <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
+            <p>查询本学期课表 成绩以及考试时间.</p>
+            <p class="alert alert-danger">如果长时间不能跳转只能说明正方系统挂掉了...</p>
           </div>
           <div class="well" onclick="location.href='/';" style="cursor:pointer;">
-            <h4><a href="">总成绩查询</a></h4>
-            <p>查询大学以来所有成绩,包括第二专业和补考成绩.</p>
-          </div>
-          <div class="well" onclick="location.href='/';" style="cursor:pointer;">
-            <h4><a href="">四六级最新成绩查询</a></h4>
+            <h4><a href="/cet">四六级成绩查询</a></h4>
             <p>刚刚考完的四六级成绩出来了!!从这里可以查询!!!.</p>
           </div>
         </div>
 
         <div class="span6">
           <div class="well" onclick="location.href='/';" style="cursor:pointer;">
-            <h4><a href="">本学期成绩查询</a></h4>
-            <p>抓取正方教务系统中的本学期最新成绩,校外可用哦!!</p>
+            <h4><a href="/score">总成绩 学分绩点</a></h4>
+            <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
           </div>
-          <div class="well" onclick="location.href='/';" style="cursor:pointer;">
-            <h4><a href="">学分绩点查询</a></h4>
-            <p>平均学分绩点查询,关系学位证哦.</p>
-          </div>
-          <div class="well" onclick="location.href='/';" style="cursor:pointer;"  >
-            <h4><a href="">考试时间查询</a></h4>
-            <p>一定要记清楚哦,错过事情就大了.</p>
-          </div>
-
-
         </div>
       </div>
 
       <hr>
 
       <div class="footer">
-        <p>&copy; Company 2013</p>
+      <center>
+        Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
+        <a href="http://python.org/" target="_blank">python</a>&nbsp;
+        <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
+        Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
+        Version:2.0
+      </center>
+    </div> <!-- /container -->
+	<script type="text/javascript" src="/static/js/jquery.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+
+<!-- baidu sitecenter   -->
+    <div style="display: none;">
+      <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+      </script>
+    </div>
+<!-- baidu sitecenter   -->
       </div>
 
     </div> <!-- /container -->
