--- a/templates/cet.html
+++ b/templates/cet.html
@@ -6,8 +6,7 @@
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin" >
       <div class="alert alert-success">
-      姓名多于三个字的只输入前三个字.<br>
-      <h3><strong>查询较慢时可以多点几次 "查询" </strong><h3>
+      姓名多于三个字的只输入前三个字
       </div>
       {% if  not form.valid: %}
         <p class="alert alert-danger">输入错误:</p>
