keyerror always catch

--- a/templates/aaa.html
+++ b/templates/aaa.html
@@ -88,7 +88,9 @@
           <div class="well" onclick="location.href='/';" style="cursor:pointer;">
             <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
             <p>查询本学期课表 成绩以及考试时间.</p>
-            <p class="alert alert-danger">如果长时间不能跳转只能说明正方系统挂掉了...</p>
+	    <div class="alert alert-danger">
+		    <p>如果您遇到“internal server error”近  请检查您是否完成了 <strong>教学质量评价</strong></></p>
+	    </div>
           </div>
           <div class="well" onclick="location.href='/';" style="cursor:pointer;">
             <h4><a href="/cet">四六级成绩查询</a></h4>
