--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <center><h1>正方教务系统查询工具</h1></center>
     <hr>
     <form name="main" method="post" accept-charset="utf-8" class="form-signin">
-      <div class="alert alert-success">
-		  <h5>中文验证码问题已经解决,验证码不清楚时可刷新页面,新增<a href="/comment.html">留言板</a></h5>
+      <div class="alert alert-info">
+	<p>如果您遇到“internal server error”近请检查您是否完成了 <strong>教学质量评价</strong></></p>
       </div>
       <br>
       {{ form }}
